--- a/app.html
+++ b/app.html
@@ -58,7 +58,7 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-12 col-lg-4 border">
-                    <h2 class="mt-2">Loan Calculator</h2>
+                    <h2 class="mt-2">Mortgage Calculator</h2>
                     <!--Input form here-->
                     <form class="form mt-5">
                         <div class="form-group row mb-2">
