--- a/app.html
+++ b/app.html
@@ -61,6 +61,7 @@
                     <h2 class="mt-2">Mortgage Calculator</h2>
                     <!--Input form here-->
                     <form class="form mt-5">
+                        <!--
                         <div class="form-group row mb-2">
                             <label for="inputAmount" class="col-6 col-form-label">Loan Amount:</label>
                             <div class="col-6">
@@ -68,21 +69,57 @@
                                     <div class="input-group-prepend">
                                     <span class="input-group-text">$</span>
                                     </div>
-                                    <input type="number" id="inputAmount" class="form-control" aria-label="Loan Amount (to the nearest dollar)" placeholder="Amount" min="0">
+                                    <input type="number" id="inputAmount" class="form-control" aria-label="Loan Amount (to the nearest dollar)" placeholder="Amount" value="0" min="0">
+                                </div>
+                            </div>
+                        </div>
+                        -->
+                        <div class="form-group row mb-2">
+                            <label for="inputPrice" class="col-6 col-form-label">Price:</label>
+                            <div class="col-6">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                    <span class="input-group-text">$</span>
+                                    </div>
+                                    <input type="number" id="inputPrice" class="form-control" aria-label="Price (to the nearest dollar)" placeholder="Price" value="0" min="0">
                                 </div>
                             </div>
                         </div>
                         <div class="form-group row mb-2">
+                            <label for="inputDownPercent" class="col-6 col-form-label">Down Payment Percent:</label>
+                            <div class="col-6">
+                                <div class="input-group">
+                                    <input type="number" class="form-control" id="inputDownPercent" value="0" step=".01" min="1">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p>OR</p>
+                        <div class="form-group row mb-2">
+                            <label for="inputDownAmount" class="col-6 col-form-label">Down Payment Amount:</label>
+                            <div class="col-6">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                    <span class="input-group-text">$</span>
+                                    </div>
+                                    <input type="number" id="inputDownAmount" class="form-control" aria-label="Price (to the nearest dollar)" placeholder="Price" value="0" min="0">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group row mb-2">
                             <label for="inputTerm" class="col-6 col-form-label">Term (Months):</label>
                             <div class="col-6">
-                                <input type="number" class="form-control" id="inputTerm" placeholder="60" step="1" min="1">
+                                <input type="number" class="form-control" id="inputTerm" value="60" step="1" min="1">
                             </div>
                         </div>
                         <div class="form-group row mb-2">
                             <label for="inputRate" class="col-6 col-form-label">Interest Rate</label>
                             <div class="col-6">
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="inputRate" placeholder="3" step=".01" min="1">
+                                    <input type="number" class="form-control" id="inputRate" value="3" step=".01" min="1">
                                     <div class="input-group-append">
                                         <span class="input-group-text">%</span>
                                     </div>
@@ -100,7 +137,15 @@
                         <h4 id="monthlyPayments" class="d-flex justify-content-center mt-3"></h4>
                     </div>
                     <div class="row mt-4">
-                        <div class="col-6">Total Principal:</div>
+                        <div class="col-6">Price:</div>
+                        <div id="itemPrice" class="col-6 d-flex justify-content-end"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">Down Payment:</div>
+                        <div id="downPayment" class="col-6 d-flex justify-content-end"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">Total Loan Principal:</div>
                         <div id="totalPrincipal" class="col-6 d-flex justify-content-end"></div>
                     </div>
                     <div class="row">
@@ -161,6 +206,12 @@
     <script src="/js/site.js"></script>
     <script>
         document.getElementById("btnSubmit").addEventListener("click", getValues);
+    </script>
+    <script>
+        let dPercent = document.getElementById("inputDownPercent");
+        let dAmount = document.getElementById("inputDownAmount");
+        dPercent.addEventListener("keydown", () => {dAmount.value = 0});
+        dAmount.addEventListener("keydown", () => {dPercent.value = 0});
     </script>
 </body>
 </html>
