Added Logo and changed some styling

--- a/app.html
+++ b/app.html
@@ -55,25 +55,17 @@
     </nav>
     <!-- ****** Main Section ******-->
     <main class="flex-shrink-0">
-        <div class="container mt-5">
+        <div class="container mt-1">
+            <div class="row">
+                <div class="col d-flex align-items-center">
+                    <img src="/img/Mortgage.png" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="500" height="500"> 
+                </div>             
+            </div>
             <div class="row">
                 <div class="col-12 col-lg-4 border">
-                    <h2 class="mt-2">Mortgage Calculator</h2>
+                    <!--<h2 class="mt-2">Mortgage Calculator</h2>-->
                     <!--Input form here-->
-                    <form class="form mt-5">
-                        <!--
-                        <div class="form-group row mb-2">
-                            <label for="inputAmount" class="col-6 col-form-label">Loan Amount:</label>
-                            <div class="col-6">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                    <span class="input-group-text">$</span>
-                                    </div>
-                                    <input type="number" id="inputAmount" class="form-control" aria-label="Loan Amount (to the nearest dollar)" placeholder="Amount" value="0" min="0">
-                                </div>
-                            </div>
-                        </div>
-                        -->
+                    <form class="form mt-3">
                         <div class="form-group row mb-2">
                             <label for="inputPrice" class="col-6 col-form-label">Price:</label>
                             <div class="col-6">
@@ -96,7 +88,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p>OR</p>
+                        <b>OR</b>
                         <div class="form-group row mb-2">
                             <label for="inputDownAmount" class="col-6 col-form-label">Down Payment Amount:</label>
                             <div class="col-6">
