Removed input placeholder

--- a/app.html
+++ b/app.html
@@ -73,7 +73,7 @@
                                     <div class="input-group-prepend">
                                     <span class="input-group-text">$</span>
                                     </div>
-                                    <input type="number" id="inputPrice" class="form-control" aria-label="Price (to the nearest dollar)" placeholder="Price" value="0" min="0">
+                                    <input type="number" id="inputPrice" class="form-control" aria-label="Price (to the nearest dollar)" value="0" min="0">
                                 </div>
                             </div>
                         </div>
@@ -96,7 +96,7 @@
                                     <div class="input-group-prepend">
                                     <span class="input-group-text">$</span>
                                     </div>
-                                    <input type="number" id="inputDownAmount" class="form-control" aria-label="Price (to the nearest dollar)" placeholder="Price" value="0" min="0">
+                                    <input type="number" id="inputDownAmount" class="form-control" aria-label="Price (to the nearest dollar)" value="0" min="0">
                                 </div>
                             </div>
                         </div>
