--- a/app.html
+++ b/app.html
@@ -153,7 +153,7 @@
             <div class="row mt-4">
                 <!--Results table-->
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table table-hover">
                         <thead class=" customHead">
                             <tr>
                                 <th scope="col">Month</th>
